# solagent-economy

./: Anchor.toml  README.md  package.json
examples/: README.md  demo.ts
programs/solagent/: Cargo.toml
programs/solagent/src/: lib.rs
sdk/: package.json
sdk/src/: index.ts
tests/: solagent.ts
