[package]
name = "solagent"
version = "0.1.0"
description = "SolAgent Economy Protocol - Native Solana infrastructure for AI agent payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solagent"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
